<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gastosPersonales</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="titulo">Gastos personales</string>
    <string name="email">Correo electrónico:</string>
    <string name="password">Contraseña:</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnCrearCuenta">Crear Cuenta</string>
    <string name="txtAutor">(c) 2013 José Alfonso Suárez Moreno</string>
    <string name="txtCorreoAutor">joseasuarez@gmail.com</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="txtSaldo">Saldo Actual:</string>
    <string name="cero">0.00</string>
    <string name="txtTotalEntradas">Total Entradas:</string>
    <string name="btnUltimosMovimientos">Últimos Movimientos</string>
    <string name="btnMovimientosFecha">Movimientos por fecha</string>
    <string name="txtBtnConceptos">Conceptos</string>
    <string name="txtBtnProyectos">Proyectos</string>
    <string name="title_activity_movimientos">Movimientos</string>
    <string name="txtUltimosMovimientos">Últimos movimientos</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtProyecto">Proyecto:</string>
    <string name="txtConcepto">Concepto:</string>
    <string name="txtImporte">Importe:</string>
    <string name="txtVSaldo">Saldo</string>
    <string name="txtBtnNuevoMovimiento">Nuevo Movimiento</string>
    <string name="title_activity_editar_movimiento">EditarMovimiento</string>
    <string name="textFecha">Fecha:</string>
    <string name="btnGrabar">Grabar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnSalir">Salir</string>
    <string name="txtNuevoMovimiento">Nuevo Movimiento</string>
    <string name="btnTxtNuevoProyecto">Nuevo Proyecto</string>
    <string name="txtBtnNuevoConcepto">Nuevo Concepto</string>
    <string name="title_activity_proyecto_edit">ProyectoEdit</string>
    <string name="action_settings">Settings</string>
    <string name="txtNuevoProyecto">Nuevo Proyecto</string>
    <string name="txtNombre">Nombre:</string>
    <string name="title_activity_concepto_edit">ConceptoEdit</string>
    <string name="txtNuevoConcepto">Nuevo Concepto</string>
    <string name="tstTotalSalidas">Total salidas:</string>
    <string name="txtSalidas">Salidas:</string>
    <string name="txtBtnVolver">Volver</string>
    <string name="title_activity_movimientos_por_fecha">MovimientosPorFecha</string>
    <string name="txtFechaDesde">Fecha desde:</string>
    <string name="txtFechaHasta">Fecha hasta:</string>
    <string name="txtBtnContinuar">Continuar</string>

</resources>